# MCPE-PEWIKU

./: .gitignore  CMakeLists.txt  Makefile  README.md
handheld/project/android/: .project
handheld/project/android_java/: .project
handheld/project/dedicated_server/: CMakeLists.txt  Makefile
handheld/project/iosproj/minecraftpe/: main.mm  minecraftpeAppDelegate.h  minecraftpeAppDelegate.mm  minecraftpeViewController.h  minecraftpeViewController.mm
handheld/project/iosproj/minecraftpe/dialogs/: BaseDialogController.h  BaseDialogController.mm  CreateNewWorldViewController.h  CreateNewWorldViewController.mm  IDialog.h  RenameMPWorldViewController.h  RenameMPWorldViewController.mm
handheld/project/lib_projects/raknet/jni/: CMakeLists.txt
handheld/project/linux/: CMakeLists.txt  Makefile
handheld/project/raspberry/: Makefile
handheld/project/win32/: MinecraftWin32.sln  MinecraftWin32.vcxproj
handheld/project/win32_gl/: MinecraftWin32_GL.vcxproj
handheld/src/: NinecraftApp.cpp  SharedConstants.cpp  main.cpp  main_rpi.h  main_unix.h  main_win32.h
handheld/src/client/: Minecraft.cpp  MouseHandler.cpp  Options.cpp  PixelCalc.h
handheld/src/client/gui/: Gui.cpp  Screen.cpp
handheld/src/client/gui/screens/: ArmorScreen.cpp  ArmorScreen.h  IngameBlockSelectionScreen.cpp  JoinGameScreen.cpp  ScreenChooser.cpp  SelectWorldScreen.cpp  StartMenuScreen.cpp
handheld/src/client/gui/screens/crafting/: PaneCraftingScreen.cpp
handheld/src/client/gui/screens/touch/: TouchIngameBlockSelectionScreen.cpp  TouchIngameBlockSelectionScreen.h  TouchSelectWorldScreen.cpp
handheld/src/client/player/input/: KeyboardInput.cpp
handheld/src/client/renderer/: GameRenderer.cpp  gles.h
handheld/src/network/: ClientSideNetworkHandler.cpp
handheld/src/platform/: CThread.cpp  CThread.h
handheld/src/platform/input/: Keyboard.h  Mouse.cpp
handheld/src/world/entity/player/: Inventory.cpp
handheld/src/world/level/tile/: SandTile.cpp
